fix(site:Navigation): Icons position on mobile

--- a/web/src/components/Common/Navigation/Navigation.module.scss
+++ b/web/src/components/Common/Navigation/Navigation.module.scss
@@ -186,14 +186,14 @@
 
   .Root.Responsive .ToggleNavButton {
     position: absolute;
-    right: spacing(7);
-    top: spacing(2.5);
+    right: 65px;
+    top: 15px;
   }
 
   .Root.Responsive .DarkModeToggle {
     position: absolute;
     right: spacing(2);
-    top: spacing(1);
+    top: spacing(1.5);
   }
 
   .Root.Responsive .NavLink {
